# termux-tools

./: Makefile.am  config.status  configure.ac
autom4te.cache/: output.0  requests  traces.0
mirrors/: Makefile.am  default
motds/: Makefile.am  motd.sh.in
scripts/: Makefile.am  pkg.in
